# TileRace

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Directory.Build.props  GAME_DESIGN.md  README.md  TileRace.slnx  TileRace.vcxproj  buildlog.txt  fix_condition.ps1  todo.txt
TileRace/: ENET_TEST_README.md  ENetTest.cpp  Game.cpp  Game.h  NetworkManager.cpp  Player.cpp  Player.h  TileRace.vcxproj  TileRace.vcxproj.filters  TrailManager.cpp  main.cpp
TileRace/src/: InputManager.cpp  main.cpp
TileRace/src/engine/: Definitions.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  NetworkManager.h
TileRace/src/entities/: Player.cpp  Player.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  TrailManager.h
TileRace/src/utility/: FileIO.cpp  FileIO.h
assets/levels/: ASCII Map Editor.url  Maps.tiled-session  TileSet.tsx  _lobby.txt  level_01.txt  level_02.txt  level_03.txt  level_04.txt  level_05.txt  level_06.txt  level_07.txt  level_08.txt  level_09.txt  level_10.txt
assets/levels/chunks/: Simple.tmj  Simple2.tmj  _Checkpoint01.tmj  _End01.tmj  _Fork01.tmj  _Merge01.tmj  _Start01.tmj  __README.md
assets/levels/chunks/01/: Flat02.tmj  Flat04.tmj
assets/levels/chunks/02/: Simple03.tmj  Simple05.tmj
assets/levels/chunks/03/: Medium04.tmj  Medium05.tmj
assets/levels/chunks/04/: Hard01.tmj  Hard03.tmj  Hard05.tmj
assets/levels/chunks/05/: Extreme01.tmj  Extreme02.tmj  Extreme03.tmj  Extreme04.tmj  Extreme05.tmj
assets/levels/tilemaps/: Level01.tmj  _Lobby.tmj
deploy/: deploy_itch.cmd
deploy/win/assets/levels/chunks/01/: Flat01.tmj  Flat02.tmj  Flat03.tmj  Flat05.tmj
deploy/win/assets/levels/chunks/02/: Simple01.tmj  Simple02.tmj  Simple04.tmj
deploy/win/assets/levels/chunks/03/: Medium01.tmj  Medium02.tmj  Medium03.tmj
deploy/win/assets/levels/chunks/04/: Hard01.tmj  Hard02.tmj  Hard03.tmj  Hard04.tmj  Hard05.tmj
deploy/win/assets/levels/tilemaps/: Level02.tmj  _Lobby.tmj
docs/: MODALITA_DI_GIOCO.md
enet/: enet.vcxproj  enet.vcxproj.filters
proj/Sfx Project/: Sfx.als
proj/Sfx Project/Backup/: Sfx [2026-03-03 222202].als  Sfx [2026-03-03 222450].als  Sfx [2026-03-10 201025].als
src/: app_icon.rc.in
src/client/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Colors.h  GameClient.cpp  GameClient.h  GameSession.cpp  GameSession.h  HudCoop.cpp  HudCoop.h  HudRace.cpp  HudRace.h  HudVersus.cpp  HudVersus.h  InputHandler.cpp  InputHandler.h  InputSampler.cpp  InputSampler.h  LevelPalette.h  LevelResultsCoop.cpp  LevelResultsCoop.h  LevelResultsRace.cpp  LevelResultsRace.h  LocalServer.cpp  LocalServer.h  MainMenu.cpp  MainMenu.h  NetworkClient.cpp  NetworkClient.h  Renderer.cpp  Renderer.h  SaveData.cpp  SaveData.h  SessionResultsCoop.cpp  SessionResultsCoop.h  SessionResultsRace.cpp  SessionResultsRace.h  SfxManager.cpp  SfxManager.h  SoundPool.cpp  (+8 more)
src/common/: CMakeLists.txt  GameLogic.cpp  GameMode.h  GameState.h  InputFrame.h  Physics.h  Player.cpp  Player.h  PlayerState.h  Protocol.h  SpawnFinder.h  World.cpp  World.h
src/server/: CMakeLists.txt  ChunkStore.cpp  ChunkStore.h  GameServer.cpp  GameServer.h  LevelGenerator.cpp  LevelGenerator.h  LevelManager.cpp  LevelManager.h  LevelValidator.cpp  LevelValidator.h  PlayerReset.h  ServerLogic.cpp  ServerLogic.h  ServerSession.cpp  ServerSession.h  main.cpp
utils/: PROJECT_CONTEXT.md  Skeleton.h  generate_skeleton.py  new_chat.txt
